# ARDL

./: .gitignore  ARDL.pc.cmake  CMakeLists.txt  README.md  uncrustify.cfg
ARDL-NP/: ARDL-NP.pc.cmake  CMakeLists.txt
ARDL-NP/cmake/: ARDL-NPConfig.cmake.in
ARDL-NP/include/: IGMMModel.hpp
ARDL-NP/include/IGMM/: IGMM.hpp  IGMMVC.hpp  MVN.hpp
ARDL-NP/include/WaveletNetwork/: Wavelet.hpp  WaveletNetwork.hpp  WaveletNetworkData.hpp  WaveletUtil.hpp
ARDL-NP/tests/: CMakeLists.txt
ARDL-NP/tests/WaveletNetwork/: CMakeLists.txt  WaveletTests.cpp
ARDL-SP/: ARDL-SP.pc.cmake  CMakeLists.txt
ARDL-SP/cmake/: ARDL-SPConfig.cmake.in
ARDL-SP/include/: IGMMSPModel.hpp
ARDL-Trajectory/: CMakeLists.txt
ARDL-Trajectory/include/ARDL/Constraints/: CartesianLink.hpp  Constraint.hpp  Constraints.hpp  JointPositionLimit.hpp  JointVelocityLimit.hpp  SelfCollision.hpp
ARDL-Trajectory/include/ARDL/IdentificationTrajectory/: MFTOptimizer.hpp
ARDL-Trajectory/include/ARDL/Util/: BufferLogging.hpp
ARDL-Trajectory/include/ARDL/Visualization/: MFTVisualizer.hpp  VisualizerBase.hpp
ARDL-Trajectory/scripts/: DisplayTrajectory.py  OptimizeMultiple.bash  generateData.bash
ARDL-Trajectory/src/IdentificationTrajectory/: OptimizeTrajectory.cpp  WorkspaceSubsets.cpp  optim.json  template.json  test.json  test2.json
ARDL-Trajectory/src/TrajectoryVerification/: VerifyTrajectoriesMulti.cpp  test2.json
ARDL-Trajectory/src/Visualization/: MFTVisualizer.cpp
Examples/: CMakeLists.txt
Examples/src/: DynamicsExample.cpp
cmake/: ARDLConfig.cmake.in
include/: Util.h
include/ARDL/: ARDL.hpp  typedefs.hpp
include/ARDL/Data/: Data.hpp
include/ARDL/Dynamics/: Dynamics.hpp  DynamicsTree.hpp  LinkRegressors.hpp
include/ARDL/Kinematics/: ForwardKinematics.hpp  ForwardKinematicsOptim.hpptmp  ForwardKinematicsTree.hpp
include/ARDL/Math/: AdjointSE3.hpp  AdjointT3.tpp  LieBracketSE3.hpp  LieExpression.hpp  LieProduct.hpp  Motion.hpp  Pose.hpp  SpatialInertia.hpp
include/ARDL/Model/: Chain.hpp  Joint.hpp  Link copy.pp  Link.hpp  Tree.hpp
include/ARDL/Model/Joints/: FixedJoint.hpp  Joints.hpp  PrismaticJoint.hpp  RevoluteJoint.hpp
include/ARDL/Non-Parametric/: NPModel.hpp
include/ARDL/RandomFeatures/: RFMap.hpp
include/ARDL/Semi-Parametric/: SPModel.hpp
include/ARDL/Util/: CTPlugin.hpp  Collision.hpp  Filter.hpp  Iterators.hpp  Logger.hpp  MIMOOperator.hpp  Macros.hpp  Math.hpp  MatrixInitializer.hpp  ModelPath.hpp  Overloaded.hpp  Pseudoinverse.hpp  Random.hpp  Search.hpp  Timer.hpp  Visit.hpp  sobol.hpp
src/: Test.cpp  dummy.cpp
tests/: CMakeLists.txt  robotTestMain.cpp
tests/Collision/: CMakeLists.txt  Collision.hpp  CollisionAligned.cpp  MFTVisualizer.hpp  VisualizerBase.hpp  common.hpp
tests/Collision/Shaders/: rlights.h
tests/Dynamics/: CMakeLists.txt  DynamicMatrices.hpp  DynamicsAligned.cpp  DynamicsUA.cpp  Regressor.hpp  common.hpp
tests/Kinematics/: CMakeLists.txt  Frames.hpp  Jacobian copy.gppold  Jacobian.hpp  KinematicsAligned.cpp  KinematicsUnaligned.cpp  common.hpp
tests/Math/: Adjoint.hpp  CMakeLists.txt  MathAligned.cpp  common.hpp
tests/Model/: CMakeLists.txt  Copy.hpp  ModelAligned.cpp  common.hpp
