list(APPEND DLIB_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})
add_definitions(-DPINOCCHIO_URDFDOM_TYPEDEF_SHARED_PTR -DPINOCCHIO_URDFDOM_USE_STD_SHARED_PTR)
add_executable(${PROJECT_NAME}_DynamicsTests ${CMAKE_CURRENT_SOURCE_DIR}/DynamicsAligned.cpp)
target_include_directories(${PROJECT_NAME}_DynamicsTests PRIVATE ${${PROJECT_NAME}_SOURCE_DIR}/include ${DLIB_INCLUDES})
target_compile_features(${PROJECT_NAME}_DynamicsTests PRIVATE cxx_std_17)
target_compile_definitions(${PROJECT_NAME}_DynamicsTests PRIVATE ARDL_VARIANT=${ARDL_VARIANT} ARDL_SHARED_PTR=${ARDL_SHARED_PTR} ARDL_EXTERNAL_DATA=$<BOOL:${ARDL_EXTERNAL_DATA}>)
message(STATUS "DYANMICS+========================= $<BOOL:${ARDL_EXTERNAL_DATA}>")
target_link_libraries(${PROJECT_NAME}_DynamicsTests  PRIVATE ${DLIB_PATHS} orocos-kdl)
target_compile_options(${PROJECT_NAME}_DynamicsTests PRIVATE ${pinocchio_CFLAGS_OTHER})
install(TARGETS ${PROJECT_NAME}_DynamicsTests
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
